April21/azurespecific/networking/azure-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aks-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: inventory-service
          servicePort: 80
        path: /
